  because version 2.88.6 contains several new bugs, including some encoder issues, which cause previously correctly
  saved images to get corrupted: https://github.com/mono/SkiaSharp/issues?q=label%3Atype%2Fbug+2.88.6+


+ KGySoft.Drawing.SkiaSharp namespace
=====================================
+ ColorExtensions class:
  + New conversion methods also for SKColorF and SKPMColor types.
  + New ToPColor32, ToColor64, ToPColor64, ToColorF and ToPColorF conversion methods for SkiaSharp color types.


~~~~~~~~~
+ v7.2.0:
~~~~~~~~~

+ KGySoft.Drawing.SkiaSharp namespace
=====================================

+ New SKBitmapExtensions class:
  + New GetReadableBitmapData methods: to get an IReadableBitmapData data for an SKBitmap of any pixel format.
  + New GetWritableBitmapData methods: to get an IWritableBitmapData data for an SKBitmap of any pixel format.
  + New GetReadWriteBitmapData methods: to get an IReadWriteBitmapData data for an SKBitmap of any pixel format.
+ New SKPixmapExtensions class:
  + New GetReadableBitmapData methods: to get an IReadableBitmapData data for an SKPixmap of any pixel format.
  + New GetWritableBitmapData methods: to get an IWritableBitmapData data for an SKPixmap of any pixel format.
  + New GetReadWriteBitmapData methods: to get an IReadWriteBitmapData data for an SKPixmap of any pixel format.
+ New SKImageExtensions class:
  + New GetReadableBitmapData methods: to get an IReadableBitmapData data for an SKImage instance.
+ New SKSurfaceExtensions class:
  + New GetReadableBitmapData methods: to get an IReadableBitmapData data for an SKSurface of any pixel format.
  + New GetWritableBitmapData methods: to get an IWritableBitmapData data for an SKSurface of any pixel format.
  + New GetReadWriteBitmapData methods: to get an IReadWriteBitmapData data for an SKSurface of any pixel format.
+ New SKImageInfoExtensions class
+ New ColorExtensions class
+ ReadableBitmapDataExtensions:
  + New ToSKBitmap methods